Opened 8 years ago
Closed 8 years ago
#9523 closed bug (fixed)
Multi-thread build broken due to libnetapi
Reported by: | kallisti5 | Owned by: | kallisti5 |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Stack | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Performing a jam -q -j4 @nightly-raw results in the following:
In file included from src/kits/network/libnetapi/HttpAuthentication.cpp:22: src/kits/network/libnetapi/md5.h:27: openssl/md5.h: No such file or directory
Running jam again resolves this failure.
Change History (3)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
this was resolved in hrev45363. Some HttpAuth was missing from openssl grist.
Note:
See TracTickets
for help on using tickets.
This was introduced here:
http://cgit.haiku-os.org/haiku/commit/src/kits/network/libnetapi/Jamfile?id=d1b6afe678cffdd0d56a9a1dea8071932a568dd7