Network Kit: Fix parallel build

* HttpAuthentication.cpp wasn't in ssl grist
  resulting in unmet dependencies. #9523
* md5.c only being used when ssl wasn't available
  was kind of spaghetti logic.  These changes make
  this more obvious.